[package]
name = "embedded_holochain_runner"
description = "A library that makes it VERY easy to run Holochain as a library, from your own binary, with great defaults"
license = "CAL-1.0"
version = "0.0.4"
authors = ["Connor Turland <connor@sprillow.com>"]
edition = "2018"

[lib]

[dependencies]
serde = "1.0.123"
futures = "0.3.1"
human-panic = "1.0.3"
tracing = "0.1.26"
tokio = { version = "1.3", features = ["full"] }
holochain_util = "0.0.4"
holochain_p2p = "0.0.8"
holochain_types = "0.0.8"
holochain_zome_types = "0.0.10"
holochain_keystore = "0.0.8"
holochain = "0.0.108"
hdk = "0.0.108"
ctrlc = { version = "3.2.0", features = ["termination"] }

[patch.crates-io]
rkv = { git = "https://github.com/holochain/rkv.git", branch = "master" }
lmdb-rkv = { git = "https://github.com/holochain/lmdb-rs.git" }
